# my_driver_gpio

apps/my_application/: CMakeLists.txt  app.overlay  prj.conf
apps/my_application/src/: main.c
boards/arm/blue_pill/: blue_pill.dts  blue_pill_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/dts/bindings/funny_driver_name/: zephyr,vo-khac-nam.yaml
drivers/gpio_driver/: CMakeLists.txt  Kconfig  gpio_driver.c  gpio_driver.h
drivers/zephyr/: module.yaml
